feat: Add startup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         tools:ignore="LockedOrientationActivity">
 
     <application
-            android:name=".app.GithubUsersApp"
+            android:name=".GithubUsersApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
