--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="io.github.ovso.githubusers"
-        tools:ignore="LockedOrientationActivity">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="io.github.ovso.githubusers"
+  tools:ignore="LockedOrientationActivity">
 
-    <application
-            android:name=".GithubUsersApp"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.GithubUsers"
-            tools:ignore="AllowBackup">
-        <activity
-                android:name=".ui.main.MainActivity"
-                android:exported="true"
-                android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:name=".GithubUsersApp"
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.GithubUsers"
+    tools:ignore="AllowBackup">
+    <activity
+      android:name=".ui.main.MainActivity"
+      android:exported="true"
+      android:screenOrientation="portrait">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+
+    <provider
+      android:name="androidx.startup.InitializationProvider"
+      android:authorities="io.github.ovso.githubusers.androidx-startup"
+      android:exported="false"
+      tools:node="merge">
+      <meta-data
+        android:name="io.github.ovso.githubusers.initializer.MavericksInitializer"
+        android:value="androidx.startup" />
+    </provider>
+
+  </application>
 
 </manifest>
