--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
   package="io.github.ovso.githubusers"
   tools:ignore="LockedOrientationActivity">
 
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
     android:name=".GithubUsersApp"
     android:allowBackup="true"
