--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -21,10 +21,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@vv
 
       - name: Setup jdk 1.8
         uses: actions/setup-java@v1
-        
+        with:
+          java-version: 1.8
+
       - name: Build with Gradle
-        run: bash ./gradlew bundleStagingRelease --stacktrace
+#        run: bash ./gradlew bundleStagingRelease --stacktrace
+        run: bash ./gradlew assembleDebug --stacktrace
