--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,4 @@ jobs:
           java-version: 1.8
 
       - name: Build with Gradle
-#        run: bash ./gradlew bundleStagingRelease --stacktrace
-        run: bash ./gradlew assembleRelease --stacktrace
+        run: bash ./gradlew bundleStagingRelease --stacktrace
