--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,13 @@ jobs:
 
       - name: Build with Gradle
         run: bash ./gradlew bundleStagingRelease --stacktrace
+
+      - name: Sign app
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: app/build/outputs/stagingRelease
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias           : ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword     : ${{ secrets.KEY_PASSWORD }}
+
