--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,14 @@ jobs:
         run: bash ./gradlew bundleStagingRelease --stacktrace
 
       - name: Sign app
-        id  : sign_app
+        id: sign_app
         uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: app/build/outputs/bundle/stagingRelease
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias           : ${{ secrets.ALIAS }}
+          alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword     : ${{ secrets.KEY_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
 
       - name: Upload aab
         uses: actions/upload-artifact@v2
@@ -47,10 +47,10 @@ jobs:
           name: vanilla_staging_release.aab
           path: ${{steps.sign_app.outputs.signedReleaseFile}}
 
-#      - name: Upload mapping
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: mapping.txt
-#          path: app/build/outputs/mapping/release/mapping.txt
+      - name: Upload mapping
+        uses: actions/upload-artifact@v2
+        with:
+          name: mapping.txt
+          path: app/build/outputs/mapping/stagingRelease/mapping.txt
 
 
