--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup jdk 1.8
         uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '8'
 
       - name: Build with Gradle
         run: bash ./gradlew bundleStagingRelease --stacktrace
