--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-#    branches: [ main ]
-    create:
-      tags: '*'
+    branches: [ main ]
+#    create:
+#      tags: '*'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
